--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,7 +1,6 @@
-<div class="flex h-screen">
+<div class="flex h-screen w-screen">
   <!-- Sidebar -->
-  <div
-    class="sideBar">
+  <div class="sideBar">
     <div class="sandwich">
       <img src="sandwich.png" alt="menu" class="w-5 h-5">
     </div>
@@ -28,7 +27,7 @@
     </div>
   </div>
 
-  <div class="flex flex-col w-full h-full">
+  <div class="flex flex-col w-11/12 h-full">
     <!-- Navbar -->
     <div class="navbar">
       <div class="relative flex my-auto items-center w-2/3 sm:w-1/2  transition-all duration-500 ease-in-out">
