--- a/src/app/components/preview/preview.component.html
+++ b/src/app/components/preview/preview.component.html
@@ -1,7 +1,7 @@
-<div class="group relative flex flex-col h-full px-10 py-10 border border-gray-200 hover:border-orange-200 rounded-xl gap-5 hover:shadow-xl transition-all duration-500 ease-in-out">
+<div class="group relative flex flex-col h-full p-5 sm:p-10 border border-gray-200 hover:border-orange-200 rounded-xl gap-5 hover:shadow-xl transition-all duration-500 ease-in-out">
   <div class="absolute inset-0 rounded-xl bg-gray-50 w-full h-full"></div>
   <div class="absolute inset-0 rounded-xl bg-gradient-to-br from-red-200 via-white to-orange-200 opacity-0 transition-all duration-500 ease-in-out group-hover:opacity-100 w-full h-full"></div>
-  <div class="relative z-10 flex justify-between">
+  <div class="relative z-10 flex flex-col gap-3 sm:flex-row sm:justify-between">
     <div class="flex gap-x-3">
       <div class="flex rounded-xl bg-gray-200 group-hover:bg-gray-50 p-2 justify-center items-center transition-all duration-500 ease-in-out">
         <img src="sheet.png" alt="sheet" class="w-8 h-8 "/>
@@ -12,11 +12,14 @@
       </div>
     </div>
 
-    <div class="flex justify-center items-center gap-2">
+    <div class="flex sm:justify-center items-center gap-2">
       <img src="clock.png" alt="clock" class="w-3.5 h-3.5"/>
       <p>{{ last_edited }}</p>
     </div>
   </div>
   <app-table></app-table>
+  <div class="relative z-10 w-full flex justify-center items-center p-2">
+    <a href="#" class="bg-red-800 text-white text-center rounded-xl p-2 w-2/3 sm:w-1/4 group-hover:-translate-y-1 group-hover:scale-110 transition-all duration-500 ease-in-out">Open Spreadsheet</a>
+  </div>
 </div>
 
