Reports almost done

--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -12,7 +12,7 @@
         <img src="home.png" alt="home" class="anchorImg">
         <p class="anchorText">Home</p>
       </a>
-      <a href="/home" class="anchor">
+      <a href="/reports" class="anchor">
         <img src="reports.png" alt="reports" class="anchorImg">
         <p class="anchorText">Reports</p>
       </a>
