--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -18,7 +18,9 @@
             </div>
 
             <div class="flex flex-col justify-center w-full h-full gap-5">
-                <app-preview [table]="tables[0]"/>
+              @for(table of tables; track table.table_id) {
+                <app-preview [table]="table"/>
+              }
             </div>
         </div>
     </div>
