--- a/src/app/components/list-header/list-header.component.html
+++ b/src/app/components/list-header/list-header.component.html
@@ -1,14 +1,14 @@
 <div class="listHeader">
   <div class="flex flex-col text-left p-3 gap-1">
-    <p class="text-2xl md:text-3xl font-serif font-semibold">Reports</p>
-    <p class="hidden md:block font-normal">Manage and view all reports</p>
+    <p class="text-2xl md:text-3xl font-serif font-semibold">{{ formatTitle() }}s</p>
+    <p class="hidden md:block font-normal">{{ subTitle }}</p>
   </div>
   <div class="flex justify-center items-center gap-3">
-    <a href="#"
+    <button (click)="open()"
        class="flex justify-center items-center gap-3 rounded-lg bg-white text-black py-1 px-0.5 md:px-3 transformations">
-      <img src="create.png" alt="create" class="w-6 h-6 md:w-7 md:h-7"/>
-      <p class="hidden md:block">New Report</p>
-    </a>
+      <img src="/create.png" alt="create" class="w-6 h-6 md:w-7 md:h-7"/>
+      <p class="hidden md:block">New {{ entity }}</p>
+    </button>
     <div class="flex bg-white rounded-lg p-1 transformations">
       <div class="toggleListGridDisplay" [class.bg-green-500]="isListDisplay"
            [class.bg-white]="!isListDisplay"
@@ -78,18 +78,20 @@
           <div
             (click)="$event.stopPropagation()"
             class="rounded-lg shadow-xl bg-gray-50 border border-gray-200 absolute top-10 right-1/2 z-10">
-            <div class="text-black border-b border-gray-200 p-2 hover:bg-gray-100 flex gap-2 items-center">
-              <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" class="w-7 h-7">
-                <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
-                <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
-                <g id="SVGRepo_iconCarrier">
-                  <path
-                    d="M5.625 15C5.625 14.5858 5.28921 14.25 4.875 14.25C4.46079 14.25 4.125 14.5858 4.125 15H5.625ZM4.875 16H4.125H4.875ZM19.275 15C19.275 14.5858 18.9392 14.25 18.525 14.25C18.1108 14.25 17.775 14.5858 17.775 15H19.275ZM11.1086 15.5387C10.8539 15.8653 10.9121 16.3366 11.2387 16.5914C11.5653 16.8461 12.0366 16.7879 12.2914 16.4613L11.1086 15.5387ZM16.1914 11.4613C16.4461 11.1347 16.3879 10.6634 16.0613 10.4086C15.7347 10.1539 15.2634 10.2121 15.0086 10.5387L16.1914 11.4613ZM11.1086 16.4613C11.3634 16.7879 11.8347 16.8461 12.1613 16.5914C12.4879 16.3366 12.5461 15.8653 12.2914 15.5387L11.1086 16.4613ZM8.39138 10.5387C8.13662 10.2121 7.66533 10.1539 7.33873 10.4086C7.01212 10.6634 6.95387 11.1347 7.20862 11.4613L8.39138 10.5387ZM10.95 16C10.95 16.4142 11.2858 16.75 11.7 16.75C12.1142 16.75 12.45 16.4142 12.45 16H10.95ZM12.45 5C12.45 4.58579 12.1142 4.25 11.7 4.25C11.2858 4.25 10.95 4.58579 10.95 5H12.45ZM4.125 15V16H5.625V15H4.125ZM4.125 16C4.125 18.0531 5.75257 19.75 7.8 19.75V18.25C6.61657 18.25 5.625 17.2607 5.625 16H4.125ZM7.8 19.75H15.6V18.25H7.8V19.75ZM15.6 19.75C17.6474 19.75 19.275 18.0531 19.275 16H17.775C17.775 17.2607 16.7834 18.25 15.6 18.25V19.75ZM19.275 16V15H17.775V16H19.275ZM12.2914 16.4613L16.1914 11.4613L15.0086 10.5387L11.1086 15.5387L12.2914 16.4613ZM12.2914 15.5387L8.39138 10.5387L7.20862 11.4613L11.1086 16.4613L12.2914 15.5387ZM12.45 16V5H10.95V16H12.45Z"
-                    fill="#000000"></path>
-                </g>
-              </svg>
-              <p>Download</p>
-            </div>
+            @if(showDownloadOption) {
+              <div class="text-black border-b border-gray-200 p-2 hover:bg-gray-100 flex gap-2 items-center">
+                <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" class="w-7 h-7">
+                  <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                  <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+                  <g id="SVGRepo_iconCarrier">
+                    <path
+                      d="M5.625 15C5.625 14.5858 5.28921 14.25 4.875 14.25C4.46079 14.25 4.125 14.5858 4.125 15H5.625ZM4.875 16H4.125H4.875ZM19.275 15C19.275 14.5858 18.9392 14.25 18.525 14.25C18.1108 14.25 17.775 14.5858 17.775 15H19.275ZM11.1086 15.5387C10.8539 15.8653 10.9121 16.3366 11.2387 16.5914C11.5653 16.8461 12.0366 16.7879 12.2914 16.4613L11.1086 15.5387ZM16.1914 11.4613C16.4461 11.1347 16.3879 10.6634 16.0613 10.4086C15.7347 10.1539 15.2634 10.2121 15.0086 10.5387L16.1914 11.4613ZM11.1086 16.4613C11.3634 16.7879 11.8347 16.8461 12.1613 16.5914C12.4879 16.3366 12.5461 15.8653 12.2914 15.5387L11.1086 16.4613ZM8.39138 10.5387C8.13662 10.2121 7.66533 10.1539 7.33873 10.4086C7.01212 10.6634 6.95387 11.1347 7.20862 11.4613L8.39138 10.5387ZM10.95 16C10.95 16.4142 11.2858 16.75 11.7 16.75C12.1142 16.75 12.45 16.4142 12.45 16H10.95ZM12.45 5C12.45 4.58579 12.1142 4.25 11.7 4.25C11.2858 4.25 10.95 4.58579 10.95 5H12.45ZM4.125 15V16H5.625V15H4.125ZM4.125 16C4.125 18.0531 5.75257 19.75 7.8 19.75V18.25C6.61657 18.25 5.625 17.2607 5.625 16H4.125ZM7.8 19.75H15.6V18.25H7.8V19.75ZM15.6 19.75C17.6474 19.75 19.275 18.0531 19.275 16H17.775C17.775 17.2607 16.7834 18.25 15.6 18.25V19.75ZM19.275 16V15H17.775V16H19.275ZM12.2914 16.4613L16.1914 11.4613L15.0086 10.5387L11.1086 15.5387L12.2914 16.4613ZM12.2914 15.5387L8.39138 10.5387L7.20862 11.4613L11.1086 16.4613L12.2914 15.5387ZM12.45 16V5H10.95V16H12.45Z"
+                      fill="#000000"></path>
+                  </g>
+                </svg>
+                <p>Download</p>
+              </div>
+            }
             <div class="p-2 hover:bg-gray-100 flex gap-2 items-center">
               <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="#ff0000"
                    class="w-6 h-6">
@@ -109,7 +111,7 @@
                     stroke="#ff0000" stroke-width="1.5" stroke-linecap="round"></path>
                 </g>
               </svg>
-              <p class="text-red-500">Delete</p>
+              <button class="text-red-500" (click)="deleteAll()">Delete</button>
             </div>
           </div>
         }
