--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -5,26 +5,37 @@
       <img src="sandwich.png" alt="menu" class="w-5 h-5">
     </div>
     <div class="initials">
-      <p>YZ</p>
+      <p>{{ initials }}</p>
     </div>
     <div class="anchorContainer">
-      <a href="/home" class="anchor">
-        <img src="home.png" alt="home" class="anchorImg">
-        <p class="anchorText">Home</p>
-      </a>
-      <a href="/reports" class="anchor">
-        <img src="reports.png" alt="reports" class="anchorImg">
-        <p class="anchorText">Reports</p>
-      </a>
-      <a href="/home" class="anchor">
-        <img src="archive.png" alt="archive" class="anchorImg">
-        <p class="anchorText">Archive</p>
-      </a>
+      @if (role !== 'ROLE_SA') {
+        <a href="/home" class="anchor">
+          <img src="/home.png" alt="home" class="anchorImg">
+          <p class="anchorText">Home</p>
+        </a>
+        <a href="/reports" class="anchor">
+          <img src="/reports.png" alt="reports" class="anchorImg">
+          <p class="anchorText">Reports</p>
+        </a>
+        <a href="/home" class="anchor">
+          <img src="/archive.png" alt="archive" class="anchorImg">
+          <p class="anchorText">Archive</p>
+        </a>
+      } @else {
+        <a href="/admin/manage-users" class="anchor">
+          <img src="/users.png" alt="users" class="anchorImg">
+          <p class="anchorText">Users</p>
+        </a>
+        <a href="/admin/manage-teams" class="anchor">
+          <img src="/teams.png" alt="teams" class="anchorImg">
+          <p class="anchorText">Teams</p>
+        </a>
+      }
     </div>
-    <div class="logoutBtn">
-      <img src="logout.png" alt="logout" class="w-5 h-5">
+    <a class="logoutBtn" href="/login" (click)="auth.logout()">
+      <img src="/logout.png" alt="logout" class="w-5 h-5">
       <p class="text-white text-xs">Logout</p>
-    </div>
+    </a>
   </div>
 
   <div class="flex flex-col w-11/12 h-full">
@@ -33,12 +44,17 @@
       <div class="relative flex my-auto items-center w-2/3 sm:w-1/2  transition-all duration-500 ease-in-out">
         <input type="text"
                class="w-full rounded-lg p-2 border border-gray-300 focus:ring-0 focus:outline-none focus:border-gray-400"
+               [(ngModel)]="searchText"
                placeholder="search"/>
-        <img src="search.png" alt="magnifying glass" class="absolute right-2 w-5 h-5 border-l-gray-300"/>
+        <button class="absolute right-2" (click)="pushSearchText()">
+          <img src="search.png" alt="magnifying glass" class="w-5 h-5"/>
+        </button>
       </div>
       <img alt="logo" src="huawei.png" class="w-8 h-8 sm:w-12 sm:h-12"/>
     </div>
 
-    <ng-content></ng-content>
+    <div class="main">
+      <ng-content></ng-content>
+    </div>
   </div>
 </div>
